--- a/Assignments/SinaSarsharPour_COMP304Sec002_Lab02_Ex01/app/src/main/res/values-night/themes.xml
+++ b/Assignments/SinaSarsharPour_COMP304Sec002_Lab02_Ex01/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SinaSarsharPour_COMP304Sec002_Lab02_Ex01" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SinaSarsharPour_COMP304Sec002_Lab02_Ex01" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
